tests/paczka1/small_fuzzy/40355883.err
Error in line 10: 1c7EDZV S935 85,8
Error in line 12: 1c7EDZV A600 60,6
